--- a/Website/HTML/index.html
+++ b/Website/HTML/index.html
@@ -1,7 +1,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="index.css">
-    <body>
-
-    </body>
+    <link rel="icon" href="/Favicons/favicon.ico">
+    <link rel="favicon" href="favicon.ico">
+    <title>Webpage</title>
 </head>
+<body>
+
+</body>
+</html>
