--- a/Website/HTML/index.html
+++ b/Website/HTML/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="/Favicons/favicon.ico">
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="./favicon.ico">
     <title>Webpage</title>
 </head>
 <body>
