--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
 
   <body>
-    <p> Hi </p>
+    <script>
+      window.location.href = "Issues/master.html";
+    </script>
   </body>
 </html>
