--- a/Issues/master.html
+++ b/Issues/master.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
+  <p> Quick Edit Test </p>
 </body>
 </html>
