--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <script>
-      window.location.href = "Issues/master.html";
+      window.location.href = "./Issues/master.html";
     </script>
   </body>
 </html>
