Remove master.html (#54)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-   <body>
-      <script>
-         window.location.href = "./Issues/master.html";
-      </script>
-   </body>
+<html>
+  <style type="text/css">
+    body { overflow: hidden; }
+  </style>
+	
+  <body>
+    <iframe id="MSPRD"
+      title="Master Spreadsheet"
+      width="1910"
+      height="940"
+      src="https://docs.google.com/spreadsheets/d/1FIvdSnVUClLEluaqKl8jxjEWVkeZGU7Ams34eX6ISiQ/edit?usp=sharing?widget=true&amp;headers=false">
+    </iframe>
+  </body>
 </html>
